--- a/main.scss
+++ b/main.scss
@@ -5,7 +5,8 @@ $theme-colors: (
     "primary-bg": #f5f5f5,
     "light": #ffffff,
     "danger": red,
-    "dark": black
+    "dark": black,
+    "hero": #00203e
 );
 
 // include all of boostrap
