--- a/views/register.ejs
+++ b/views/register.ejs
@@ -120,7 +120,7 @@
     const emailRegex = /^[a-zA-Z0-9._-]{3,}@((csu\.)?fullerton\.edu)$/;
 
     regForm.addEventListener('submit', (e) => {
-      if (!regForm.checkVisibility || !email.value || !email.value.match(emailRegex) || !username.value || username.value == '' || !password.value || password.value.length == 0) {
+      if (!regForm.checkValidity()) {
         e.preventDefault();
       }
 
@@ -134,6 +134,7 @@
         email.classList.add("is-invalid");
         emailLabel.textContent = "Please enter a valid email";
         emailLabel.classList.add("text-danger");
+        e.preventDefault();
       }
 
       if (username.value == null || username.value == '') {
@@ -141,6 +142,7 @@
         username.classList.add("is-invalid");
         usernameLabel.textContent = "Please enter a valid username";
         usernameLabel.classList.add("text-danger");
+        e.preventDefault();
       } else {
         username.classList.remove("is-invalid");
         username.classList.add("is-valid");
@@ -153,6 +155,7 @@
         password.classList.add("is-invalid");
         passwordLabel.textContent = "Please enter a valid password";
         passwordLabel.classList.add("text-danger");
+        e.preventDefault();
       } else {
         password.classList.remove("is-invalid");
         password.classList.add("is-valid");
