--- a/views/add-a-course.ejs
+++ b/views/add-a-course.ejs
@@ -47,7 +47,7 @@
                 <form id="course-form" method="POST" action="/add-a-course" novalidate>
                     <div class="mt-3 mb-3">
                         <label for="course-id" class="form-label mb-0 fw-bold">Course Prefix and Number
-                            <span class="text-danger" id="course-prefix-and-num-error"> </span></label>
+                            <span class="text-danger" id="course-id-error"> </span></label>
                         <div class="form-text mt-0 mb-0">e.g CPSC 411</div>
                         <input name="course_id" type="text" class="form-control" id="course-id" required>
                     </div>
@@ -78,8 +78,8 @@
 
     <script>
         const courseForm = document.getElementById('course-form');
-        const courseId = document.getElementById('course-prefix-and-num');
-        const courseIdErr = document.getElementById('course-prefix-and-num-error');
+        const courseId = document.getElementById('course-id');
+        const courseIdErr = document.getElementById('course-id-error');
         const courseTitle = document.getElementById('course-title');
         const courseTitleErr = document.getElementById('course-title-error');
         const courseDesc = document.getElementById('course-desc');
