--- a/views/add-a-course.ejs
+++ b/views/add-a-course.ejs
@@ -17,7 +17,7 @@
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
 
-<body class="bg-primary-bg">
+<body class="bg-primary-bg d-flex flex-column min-vh-100">
 
     <div class="container-fluid px-0">
         <header class="d-flex flex-wrap justify-content-center py-3 px-4 bg-primary">
@@ -70,11 +70,9 @@
                 </form>
     </div>
 
-    <div class="container">
-        <footer class="fixed-bottom bg-primary">
-            <p class="text-center text-light my-3">&copy; 2023 TuffyAsks, Inc</p>
-        </footer>
-    </div>
+    <footer class=" bg-primary mt-auto">
+        <p class="text-center text-light my-0 py-3">&copy; 2023 TuffyAsks, Inc</p>
+    </footer>
 
     <script>
         const courseForm = document.getElementById('course-form');
