--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,43 +35,44 @@
         </header>
     </div>
 
-    <div class="px-4 py-5 text-center bg-hero text-light" style="height:250px;">
-        <h1 class="display-5 fw-bold mb-4">Hello, <%= locals.name %>!</h1>
+
+    <div class="px-4 py-5 text-center bg-hero text-light" style="min-height: 45vh;">
+        <h1 class="display-5 fw-bold mb-4" style="font-size: 6vh">Hello, <%= locals.name %>!</h1>
         <div class="col-10 mx-auto">
-            <p class="lead mb-4"> Welcome to the CSUF student community forum, where you can connect with other students
-                and/or faculty to ask and answer inquieres across a wide range of courses. With the easy ability to add
+            <p class="lead mb-4" style="font-size: 2.5vh;"> Welcome to the CSUF student community forum, where you can connect with other students
+                and/or faculty to ask and answer inquires across a wide range of courses. With the easy ability to add
                 new courses and posts, our forum provides a convenient way for you to get the help you need to succeed
                 academically. All questions and answers are permanently archived for future reference, creating a
                 valuable resource for current and future CSUF students. Start by searching for your course below, or
-                adding it if doesn't already exist.</p>
+                adding it if it doesn't already exist.</p>
         </div>
     </div>
 
-
-    <div class="container text-center" style="max-width:1000px; margin-top:100px;">
+    
+    <div class="container text-center mb-5" style="min-height: 45vh;">
         <form id="search-form" method="POST" action="/" novalidate>
-            <h2 class="mt-5 mb-2 fw-normal">Search Course</h2>
-
+            <h2 class="mt-5 mb-2 fw-normal" style="font-size: 4vh;">Search Course</h2>
+    
             <!-- <h5 class="mb-4">Can't find your course? <a href="/add-a-course" class="text-dark">Add it! </a></h5> -->
             <% if (locals.errorMessage) { %>
-                <h5 class="mb-2">Course doesn't exist? <a href="/add-a-course" class="text-dark">Add it! </a></h5>
-                <div class="my-0 text-danger">
+                <h5 class="mb-2" style="font-size: 2.5vh;">Course doesn't exist? <a href="/add-a-course" class="text-dark">Add it! </a></h5>
+                <div class="my-0 text-danger" style="font-size: 2vh;">
                     <%= locals.errorMessage %>
                 </div>
-                <% } else { %>
-                    <h5 class="mb-4">Course doesn't exist? <a href="/add-a-course" class="text-dark">Add it! </a></h5>
-                    <% } %>
-                        <div class="form-floating mb-4">
-                            <input name="search_course" type="text" class="form-control" id="search-course"
-                                placeholder="Course Prefix and Number (e.g CPSC 362)">
-                            <label for="search-course" id="search-label">Course Prefix and Number (e.g CPSC 362)
-                            </label>
-                        </div>
-
-                        <button class="w-100 btn btn-lg btn-primary" type="submit">Search for Course</button>
-
+            <% } else { %>
+                <h5 class="mb-4" style="font-size: 2.5vh;">Course doesn't exist? <a href="/add-a-course" class="text-dark">Add it! </a></h5>
+            <% } %>
+    
+            <div class="form-floating mb-4" style="font-size: 2.5vh;">
+                <input name="search_course" type="text" class="form-control" id="search-course"
+                    placeholder="Course Prefix and Number (e.g CPSC 362)">
+                <label for="search-course" id="search-label">Course Prefix and Number (e.g CPSC 362)</label>
+            </div>
+    
+            <button class="w-100 btn btn-lg btn-primary" type="submit" style="font-size: 2.5vh;">Search for Course</button>
         </form>
     </div>
+    
 
     <footer class=" bg-primary mt-auto">
         <p class="text-center text-light my-0 py-3">&copy; 2023 TuffyAsks, Inc</p>
