--- a/views/course.ejs
+++ b/views/course.ejs
@@ -43,7 +43,7 @@
           <div class="col-11 mx-auto">
             <div class="px-4 py-5 text-left bg-hero text-light" style="height:250px;">
               <h1 class="display-5 fw-bold mb-4"> <span class="text-uppercase">
-                  <%= locals.course.course_id %>
+                  <%= locals.course_id_no_dash %>
                 </span> - <%= locals.course.course_title %>
               </h1>
               <div>
@@ -82,7 +82,7 @@
                 <span id="word-count"></span>
               </div>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary mb-5">Submit</button>
           </form>
 
         </div>
