--- a/views/post.ejs
+++ b/views/post.ejs
@@ -46,7 +46,7 @@
           <div class="col-11 mx-auto">
             <div class="px-4 py-5 text-left bg-hero text-light" style="height:250px;">
               <h1 class="display-5 fw-bold mb-4"> <span class="text-uppercase">
-                  <%= locals.post_page.course_id %>
+                  <%= locals.course_id_no_dash %>
                 </span> - <%= locals.post_page.course_title %>
               </h1>
               <div>
@@ -82,9 +82,7 @@
             </h5>
 
             <!-- if clicked, show reply box-->
-            <p class = "btn btn-secondary mb-0" style = "position: absolute; bottom: 1rem;" id = "reply">Reply </p>
-            <!-- <p class="card-text fw-bold" style="position: absolute; bottom: 1rem; cursor: pointer;" id="reply"> Reply -->
-            </p>
+            <p class="btn btn-secondary mb-0" style="position: absolute; bottom: 1rem;" id="reply">Reply </p>
           </div>
         </div>
       </div>
@@ -92,43 +90,65 @@
 
     <div class="row">
       <div class="col-11 mx-auto">
-        <h5 class="fw-bold">Replies</h5>
+        <% if (locals.replies.length===1) { %>
+        <h5 class="fw-bold mb-2"> <%= locals.replies.length %>
+          Reply</h5>
+        <% } else { %>
+        <h5 class="fw-bold mb-2"> <%= locals.replies.length %>
+          Replies</h5>
+        <% }; %>
+      </div>
+
+      <div class="row">
+        <div class="col-11 mx-auto mb-3">
+          <hr>
+        </div>
+      </div>
+
+      <div id="add-reply-div" class="mb-5">
+        <div class="row">
+          <div class="col-11 mx-auto">
+            <!-- Form to add new reply-->
+            <form id="reply-form" method="POST" class="mt-3" novalidate>
+              <div class="mt-3 mb-4">
+                <label for="reply-body" class="fw-bold mb-1">Body <span class="text-danger" id="reply-body-error">
+                  </span></label>
+                <textarea name="reply_content" class="form-control" style="overflow:auto;" id="reply-body" rows="3" required></textarea>
+                <div class="d-flex justify-content-end align-items-end pe-3" style="height:1.2em;">
+                  <span id="word-count"></span>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+
+      <div id="no-replies">
+        <% if (locals.replies.length===0) { %>
+        <div class="row">
+          <div class="coll-11 mx-auto mb-3 text-center">
+            <h4 class="fw-bold mb-5">There are no replies to this post.</h4>
+          </div>
+        </div>
+        <% } %>
       </div>
 
       <!-- Display replies-->
       <% for (let reply of locals.replies) { %>
-      <div class="col-11 mx-auto">
-        <div class="card bg-primary text-white mb-3 py-3">
-          <div class="card-body">
-            <p class="card-text"> Reply by <%= reply.op %></p>
-            <h5 class="card-text text-wrap mb-5" style="padding-right: 4rem;">
-              <%= reply.reply_content %>
-            </h5>
+      <div class="row">
+        <div class="col-11 mx-auto">
+          <div class="card bg-primary text-white mb-3 py-3">
+            <div class="card-body">
+              <p class="card-text"> Reply by <%= reply.op %></p>
+              <h5 class="card-text text-wrap mb-5" style="padding-right: 4rem;">
+                <%= reply.reply_content %>
+              </h5>
+            </div>
           </div>
         </div>
       </div>
       <% }; %>
-    </div>
-  </div>
-
-  <div id="add-reply-div" class="mb-5">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-11 mx-auto">
-          <!-- Form to add new reply-->
-          <form id="reply-form" method="POST" class="mt-3" novalidate>
-            <div class="mt-3 mb-4">
-              <label for="reply-body" class="fw-bold mb-1">Body <span class="text-danger" id="reply-body-error">
-                </span></label>
-              <textarea name="reply_content" class="form-control" style="overflow:auto;" id="reply-body" rows="3" required></textarea>
-              <div class="d-flex justify-content-end align-items-end pe-3" style="height:1.2em;">
-                <span id="word-count"></span>
-              </div>
-              <button type="submit" class="btn btn-primary">Submit</button>
-            </div>
-          </form>
-        </div>
-      </div>
     </div>
   </div>
 
@@ -143,6 +163,7 @@
     const replyForm = document.getElementById("reply-form");
     const replyBody = document.getElementById("reply-body");
     const replyBodyError = document.getElementById("reply-body-error");
+    const noReplies = document.getElementById("no-replies");
     const replyWordLimit = 500;
 
     // hide reply box
@@ -151,6 +172,7 @@
     // if clicked, show reply box
     reply.addEventListener("click", function() {
       replyDiv.style.display = "block";
+      noReplies.style.display = "none";
     });
 
     // handle client-side error for reply form
