--- a/views/course.ejs
+++ b/views/course.ejs
@@ -119,7 +119,7 @@
           <button class="btn btn-primary w-25 new-post" type="submit">New Post</button>
         </div>
       </div>
-      <% for (let post of locals.posts) { %>
+      <% locals.posts.reverse().forEach(function(post) { %>
       <div class="row">
         <div class="col-11 mx-auto">
           <div class="card bg-primary text-white mb-3 py-3" style="height: 30vh;">
@@ -138,7 +138,7 @@
           </div>
         </div>
       </div>
-      <% }; %>
+      <% }); %>
     </div>
   </div>
   <% } %>
